# OSM_Reader

./: CMakeLists.txt  costmap.csv  costmap.numbers  costmap2.csv  costmap2.numbers  helper.cpp  helper.hpp  read_osm  read_osm.cpp  read_osm.hpp  sample.cpp
autoShuttleMake/: AutomatedParkingValetAlgorithm.mk
imageConverter/: CMakeLists.txt  costmap_carla.numbers  costmap_carla_manually.csv  png2csv.cpp
test/: .vinpearl_nt_1009.osm.swp  Town05.osm  read_osm.cpp
